# CodeStructureT

./: CMakeLists.txt  README.md
config/cmake/: PlatformPrepare_ArchSDK_linux.cmake  common_CompileOptions.cmake  common_ModulesList.cmake  common_PlatformOptions.cmake
config/scripts/: prepare_arch_libs.sh
src/: CMakeLists.txt  init.c  log_main.h  main.c  test_cmake.c
src/Log/: CMakeLists.txt  FunctionsStatistics.cpp  FunctionsStatistics.h  LogC.c  logTest.c
src/Monitor/: CMakeLists.txt  logMonitor.c  logMonitor.h  monitorTest.c  monitorTest.h
src/Monitor/Client/: ftpclient.c  ftpclient.h
src/Monitor/Server/: ftpserver.c  ftpserver.h  ftpserver_function.c  ftpserver_function.h  lists.c
src/Monitor/Server/ftp/: FTPd.h  ftpserver_functions.c  ftpserverdemo.c
src/Monitor/Util/: logCrypto.c  logCrypto.h
src/Monitor/Util/AES/: CMakeLists.txt  aes.c
src/Monitor/Util/Base64/: Base64.cpp  CMakeLists.txt
src/Monitor/Util/DES/: CMakeLists.txt  des.c  test.c
src/Monitor/Util/MD5/: CMakeLists.txt  md5c.c  test.c
src/Monitor/Util/RSA/: CMakeLists.txt  RSA.cpp
src/Monitor/Util/SHA1/: CMakeLists.txt  SHA1.cpp
src/Monitor/Util/SHA256/: sha2.c
src/Player/: CMakeLists.txt  LogPlayer.c  LogPlayer.h  Readme.txt  compile_gcc_filter.sh  compile_gcc_player.sh  simplest_ffmpeg_player.cpp  simplest_ffmpeg_video_filter.cpp
src/Test/: CMakeLists.txt
src/Utils/: CMakeLists.txt  logParseFiles.c  logParseFiles.h
src/Utils/ParserIni/: CMakeLists.txt  dictionary.c  iniParserTest.c  iniparser.c
src/Utils/ParserJsonCPP/: CMakeLists.txt
src/Utils/ParserTinyXML2/: CMakeLists.txt
src/Widget/: CMakeLists.txt  LogWidget.c  LogWidget.h
src/includes/: LogC.h  Monitor.h  Utils.h  Widget.h  build_info.h
src/includes/SDL2/include/SDL2/: SDL_config.h
tests/: SDL_UI_test.c  cairo编译.txt  complier_log.txt  jovision.rar  make_log.txt
tests/jovision/: CMakeLists.txt  如何编译cmake.txt
tests/jovision/module/: CMakeLists.txt
tests/jovision/porting/: CMakeLists.txt
tests/jovision/porting/test/: CMakeLists.txt
tests/jovision/server/sctrl/: CMakeLists.txt
tests/jovision/share/network/: CMakeLists.txt
tests/jovision/share/smtp/: CMakeLists.txt
tests/test-SDLevent/: event.c
tests/test-cairo/: cairo_test.c  cairo_test.h
tests/test-ffmpeg/: FFMPEG视音频编解码零基础学习方法 【荐】.txt  Makefile  ff_play.c  ff_play.h  ff_queue.c  ff_queue.h  ffmpeg_jni.c  myplayer.c  readme.txt  视频播放的基本原理.txt
tests/test-player_ui/: SDL-alpha.c  player_UI.c  sdl_surface与cairo_surface.txt
tests/test_ffplay/: Player.h  linux游戏.txt  main.cpp  tutorial08.c
