########################################################################################
#############                生成 player  库文件                          ############## 
########################################################################################
LIST (APPEND player_SRCS
    LogPlayer.c
    #simplest_ffmpeg_player.cpp
)
    


########################################################################################
#############               设置 player 库版本号                          ############## 
########################################################################################
set(player_LIB_VERSION     "1.0.0")
set(player_LIB_SOVERSION   "1")



########################################################################################
#############              添加头文件目录                                 ############## 
########################################################################################
include_directories(  
    ${PROJECT_SOURCE_DIR}/includes  
    ${PROJECT_SOURCE_DIR}/Player   
)  



########################################################################################
#############               添加 链接库文件目录                           ############## 
########################################################################################
link_directories(  
    /usr/local/lib   
    )  



########################################################################################
#############           生成目标库文件 并 标明版本号                      ############## 
########################################################################################
IF (COMPONENT_player)
    #生成动态库  静态库则 STATIC  
    add_library (playerlib SHARED      ${player_SRCS})  
    add_library (players STATIC        ${player_SRCS})  
    # 设置版本号，SOVERSION为API版本号
    set_target_properties(playerlib   PROPERTIES 
                            VERSION ${player_LIB_VERSION} 
                            SOVERSION ${player_LIB_SOVERSION} 
    )
ELSE (COMPONENT_player)
    MESSAGE(STATUS "Not Include COMPONENT_player module.")
ENDIF (COMPONENT_player)
    



    
    
 