
project(TestModules)

########################################################################################
#############                生成 test 库文件                           ############## 
########################################################################################
LIST (APPEND test_LIB_SRCS
     
    )




########################################################################################
#############              添加头文件目录                                 ############## 
########################################################################################
include_directories(  
    ${PROJECT_SOURCE_DIR}/includes  
    ${PROJECT_SOURCE_DIR}   
)  



########################################################################################
#############               添加 链接库文件目录                           ############## 
######################################################################################## 
link_directories(  
    /usr/local/lib   
    )  



    
    
    
    
########################################################################################
#############           生成目标库文件 并 标明版本号                      ############## 
########################################################################################
#生成动态库  静态库则 STATIC  
add_library (stream_playlib     SHARED          ${log_LIB_SRCS})  
add_library (stream_plays       STATIC          ${log_LIB_SRCS})  

# 设置依赖关系，如果当前库是最底层的共享库，则不需要设置
#add_dependencies(stream_playlib     pthread)
#add_dependencies(stream_plays     pthread)
# 添加要链接的共享库, 库的顺序就是编译器的链接时顺序
#target_link_libraries(stream_playlib pthread)
#target_link_libraries(stream_plays pthread)

# 设置版本号，SOVERSION为API版本号
set_target_properties(stream_playlib    PROPERTIES VERSION  1.0.0   SOVERSION   1 )


