
SET(CHIP nxp)
set(CMAKE_C_COMPILER arm-linux-gcc)  
set(CMAKE_CXX_COMPILER arm-linux-g++)  

cmake_minimum_required (VERSION 2.6)

PROJECT (IPCAM)

MESSAGE(STATUS "This is BINARY dir " ${IPCAM_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir "${IPCAM_SOURCE_DIR})

set(CMAKE_INSTALL_PREFIX ${IPCAM_SOURCE_DIR})

ADD_SUBDIRECTORY(share/network)
ADD_SUBDIRECTORY(share/smtp)
ADD_SUBDIRECTORY(porting)
ADD_SUBDIRECTORY(module)
ADD_SUBDIRECTORY(server/sctrl)


#SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})
#SET(CMAKE_INSTALL_PREFIX ~/usr/local)
 
#INSTALL(PROGRAMS crnode.sh DESTINATION bin)
 
#INSTALL(FILES COPYRIGHT README DESTINATION share/doc/crnode)
 
#INSTALL(DIRECTORY doc/ DESTINATION share/doc/crnode)

#cmake -DCMAKE_INSTALL_PREFIX=../ ..
#SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})


#INSTALL(DIRECTORY share/network/include/ DESTINATION libs/include PATTERN "%svn" EXCLUDE)
#INSTALL(DIRECTORY share/smtp/include/ DESTINATION libs/include PATTERN "%svn" EXCLUDE)
